@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3067] Feature: tx_oelib_List needs a callback to the containing model
 - [#3068] Fix: Value of $functionName not quoted in the data mapper
 - [#3064] Feature: ConfigurationProxy should extend PublicObject
 - [#2973] Fix: tx_oelib_List::purgeCurrent is not applicable within foreach loops
